syntax = "proto3";

package user_service;

option go_package = "protos/user_service_v1;userv1";

service UserV1 {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc CheckUser(CheckUserRequest) returns (CheckUserResponse);
}

message CheckUserRequest {
    int64 id = 1;
}

message CheckUserResponse {
    bool exists = 1;
}


message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string encryptedPass = 4;
}

message CreateUserRequest {
    string username = 1;
    string password1 = 2;
    string password2 = 3;
    string email = 4;
}

message CreateUserResponse {
    int64 id = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    bool ok = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message DeleteUserResponse {
    bool ok = 1;
}